--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
